--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -815,27 +815,29 @@ Las tablas \ref{tab:extraversion}, \ref{tab:responsabilidad} y \ref{tab:amabilid
 					\toprule\toprule
 					&&\multicolumn{7}{c}{Crecimiento del comercio internacional}\\
 					\midrule
-				Extraversión        &&      -0.064\sym{**} &&      -0.056\sym{**} &&      -0.058\sym{**} &&     -0.058\sym{**} \\
-				&&     (0.024)         &&     (0.023)         &&     (0.022)         &&    (0.023)         \\
-				PIB                 &&      -0.002         &&      -0.001         &&      -0.001         &&     -0.001         \\
-				&&     (0.003)         &&     (0.003)         &&     (0.003)         &&    (0.003)         \\
-				Derecha             &&                     &&      -0.132\sym{***}&&      -0.184\sym{***}&&     -0.196\sym{***}\\
-				&&                     &&     (0.040)         &&     (0.046)         &&    (0.051)         \\
-				Izquierda           &&                     &&      -0.118\sym{***}&&      -0.163\sym{***}&&     -0.170\sym{***}\\
-				&&                     &&     (0.041)         &&     (0.045)         &&    (0.047)         \\
-				Edad                &&                     &&                     &&       0.001         &&      0.001         \\
-				&&                     &&                     &&     (0.001)         &&    (0.001)         \\
-				Duración            &&                     &&                     &&      -0.002\sym{**} &&     -0.002\sym{**} \\
-				&&                     &&                     &&     (0.001)         &&    (0.001)         \\
-				Año                &&                     &&                     &&      -0.001         &&     -0.001         \\
-				&&                     &&                     &&     (0.001)         &&    (0.001)         \\
-				Educación           &&                     &&                     &&                     &&      0.005         \\
-				&&                     &&                     &&                     &&    (0.009)         \\
-				Constante            &&       0.336\sym{***}&&       0.407\sym{***}&&       1.686         &&      2.120         \\
-				&&     (0.121)         &&     (0.123)         &&     (1.424)         &&    (1.625)         \\
+				Extraversión        &&      -0.063\sym{***}&&      -0.057\sym{**} &&      -0.059\sym{**} &&      -0.059\sym{**} \\
+				&&     (0.023)         &&     (0.023)         &&     (0.022)         &&     (0.023)         \\
+				PIB                 &&      -0.001         &&       0.000         &&      -0.001         &&      -0.000         \\
+				&&     (0.003)         &&     (0.002)         &&     (0.002)         &&     (0.003)         \\
+				Derecha             &&                     &&      -0.107\sym{***}&&      -0.164\sym{***}&&      -0.170\sym{***}\\
+				&&                     &&     (0.036)         &&     (0.043)         &&     (0.048)         \\
+				Izquierda           &&                     &&      -0.094\sym{**} &&      -0.144\sym{***}&&      -0.148\sym{***}\\
+				&&                     &&     (0.037)         &&     (0.042)         &&     (0.045)         \\
+				Edad                &&                     &&                     &&       0.001         &&       0.001         \\
+				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
+				Duración            &&                     &&                     &&      -0.002\sym{**} &&      -0.002\sym{*}  \\
+				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
+				Año                &&                     &&                     &&      -0.001         &&      -0.001         \\
+				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
+				Educación           &&                     &&                     &&                     &&       0.003         \\
+				&&                     &&                     &&                     &&     (0.010)         \\
+				Polity Index       &&                     &&                     &&                     &&      -0.000         \\
+				&&                     &&                     &&                     &&     (0.002)         \\
+				Constante            &&       0.330\sym{***}&&       0.380\sym{***}&&       1.542         &&       1.773         \\
+				&&     (0.117)         &&     (0.123)         &&     (1.399)         &&     (1.614)         \\
 				\midrule
-				R-squared           &&       0.210         &&       0.449         &&       0.554         &&      0.561         \\
-				N                   &&          31         &&          31         &&          31         &&         31         \\
+				R-squared           &&       0.206         &&       0.402         &&       0.522         &&       0.524         \\
+				N                   &&          33         &&          33         &&          33         &&          33         \\
 					\bottomrule\bottomrule
 				\end{tabular}
 				\begin{tablenotes}
@@ -859,27 +861,29 @@ En la tabla \ref{tab:extraversion} se observa que  el coeficiente de extraversió
 				\toprule\toprule
 				&&\multicolumn{7}{c}{Crecimiento del comercio internacional}\\
 				\midrule
-				Responsabilidad     &&      -0.088\sym{**} &&      -0.061\sym{*}  &&      -0.056\sym{*}  &&      -0.069\sym{**} \\
-				&&     (0.032)         &&     (0.031)         &&     (0.031)         &&     (0.032)         \\
-				PIB                 &&       0.001         &&       0.002         &&       0.001         &&       0.001         \\
-				&&     (0.003)         &&     (0.003)         &&     (0.003)         &&     (0.002)         \\
-				Derecha             &&                     &&      -0.125\sym{***}&&      -0.174\sym{***}&&      -0.196\sym{***}\\
-				&&                     &&     (0.042)         &&     (0.050)         &&     (0.053)         \\
-				Izquierda           &&                     &&      -0.097\sym{**} &&      -0.138\sym{***}&&      -0.152\sym{***}\\
-				&&                     &&     (0.042)         &&     (0.047)         &&     (0.048)         \\
-				Edad                &&                     &&                     &&       0.001         &&       0.000         \\
+				Responsabilidad     &&      -0.087\sym{***}&&      -0.064\sym{**} &&      -0.059\sym{*}  &&      -0.069\sym{**} \\
+				&&     (0.031)         &&     (0.031)         &&     (0.031)         &&     (0.033)         \\
+				PIB                 &&       0.001         &&       0.002         &&       0.002         &&       0.002         \\
+				&&     (0.002)         &&     (0.002)         &&     (0.002)         &&     (0.003)         \\
+				Derecha             &&                     &&      -0.101\sym{**} &&      -0.154\sym{***}&&      -0.170\sym{***}\\
+				&&                     &&     (0.038)         &&     (0.047)         &&     (0.050)         \\
+				Izquierda           &&                     &&      -0.076\sym{*}  &&      -0.121\sym{**} &&      -0.132\sym{***}\\
+				&&                     &&     (0.037)         &&     (0.043)         &&     (0.046)         \\
+				Edad                &&                     &&                     &&       0.001         &&       0.001         \\
 				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
 				Duración            &&                     &&                     &&      -0.002\sym{*}  &&      -0.002\sym{*}  \\
 				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
 				Año                &&                     &&                     &&      -0.000         &&      -0.001         \\
 				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
-				Educación           &&                     &&                     &&                     &&       0.012         \\
+				Educación           &&                     &&                     &&                     &&       0.010         \\
 				&&                     &&                     &&                     &&     (0.010)         \\
-				Constante            &&       0.436\sym{***}&&       0.405\sym{**} &&       1.300         &&       2.282         \\
-				&&     (0.155)         &&     (0.150)         &&     (1.518)         &&     (1.695)         \\
+				Polity Index       &&                     &&                     &&                     &&      -0.000         \\
+				&&                     &&                     &&                     &&     (0.002)         \\
+				Constante            &&       0.430\sym{***}&&       0.393\sym{**} &&       1.153         &&       1.875         \\
+				&&     (0.150)         &&     (0.149)         &&     (1.478)         &&     (1.680)         \\
 				\midrule
-				R-squared           &&       0.214         &&       0.411         &&       0.493         &&       0.526         \\
-				N                   &&          31         &&          31         &&          31         &&          31         \\
+				R-squared           &&       0.212         &&       0.373         &&       0.466         &&       0.487         \\
+				N                   &&          33         &&          33         &&          33         &&          33         \\
 				\bottomrule\bottomrule
 			\end{tabular}
 			\begin{tablenotes}
@@ -903,27 +907,29 @@ La tabla \ref{tab:responsabilidad} presenta resultados similares para el factor 
 				\toprule\toprule
 				&&\multicolumn{7}{c}{Crecimiento del comercio internacional}\\
 				\midrule
-			Amabilidad          &&      -0.112\sym{**} &&      -0.047         &&      -0.087         &&      -0.120\sym{*}  \\
-			&&     (0.054)         &&     (0.054)         &&     (0.056)         &&     (0.060)         \\
-			PIB                 &&       0.001         &&       0.002         &&       0.001         &&       0.001         \\
-			&&     (0.003)         &&     (0.003)         &&     (0.003)         &&     (0.003)         \\
-			Derecha             &&                     &&      -0.133\sym{***}&&      -0.187\sym{***}&&      -0.214\sym{***}\\
-			&&                     &&     (0.047)         &&     (0.050)         &&     (0.053)         \\
-			Izquierda           &&                     &&      -0.094\sym{**} &&      -0.144\sym{***}&&      -0.162\sym{***}\\
-			&&                     &&     (0.045)         &&     (0.048)         &&     (0.049)         \\
-			Edad                &&                     &&                     &&       0.000         &&      -0.000         \\
+			Amabilidad          &&      -0.110\sym{**} &&      -0.059         &&      -0.094\sym{*}  &&      -0.123\sym{*}  \\
+			&&     (0.052)         &&     (0.052)         &&     (0.053)         &&     (0.060)         \\
+			PIB                 &&       0.001         &&       0.002         &&       0.001         &&       0.002         \\
+			&&     (0.003)         &&     (0.002)         &&     (0.002)         &&     (0.003)         \\
+			Derecha             &&                     &&      -0.107\sym{**} &&      -0.170\sym{***}&&      -0.192\sym{***}\\
+			&&                     &&     (0.040)         &&     (0.046)         &&     (0.050)         \\
+			Izquierda           &&                     &&      -0.072\sym{*}  &&      -0.131\sym{***}&&      -0.148\sym{***}\\
+			&&                     &&     (0.039)         &&     (0.044)         &&     (0.047)         \\
+			Edad                &&                     &&                     &&       0.001         &&       0.000         \\
 			&&                     &&                     &&     (0.001)         &&     (0.001)         \\
 			Duración            &&                     &&                     &&      -0.003\sym{**} &&      -0.003\sym{**} \\
 			&&                     &&                     &&     (0.001)         &&     (0.001)         \\
 			Año                &&                     &&                     &&      -0.001         &&      -0.001         \\
 			&&                     &&                     &&     (0.001)         &&     (0.001)         \\
-			Educación           &&                     &&                     &&                     &&       0.014         \\
-			&&                     &&                     &&                     &&     (0.010)         \\
-			Constante            &&       0.527\sym{**} &&       0.328         &&       2.112         &&       3.524\sym{*}  \\
-			&&     (0.248)         &&     (0.241)         &&     (1.599)         &&     (1.884)         \\
+			Educación           &&                     &&                     &&                     &&       0.012         \\
+			&&                     &&                     &&                     &&     (0.011)         \\
+			Polity Index       &&                     &&                     &&                     &&      -0.001         \\
+			&&                     &&                     &&                     &&     (0.002)         \\
+			Constante            &&       0.518\sym{**} &&       0.355         &&       1.983         &&       3.104         \\
+			&&     (0.240)         &&     (0.237)         &&     (1.540)         &&     (1.845)         \\
 			\midrule
-			R-squared           &&       0.136         &&       0.343         &&       0.476         &&       0.517         \\
-			N                   &&          31         &&          31         &&          31         &&          31         \\
+			R-squared           &&       0.134         &&       0.308         &&       0.454         &&       0.484         \\
+			N                   &&          33         &&          33         &&          33         &&          33         \\
 				\bottomrule\bottomrule
 			\end{tabular}
 			\begin{tablenotes}
@@ -947,27 +953,29 @@ Por último, la tabla \ref{tab:amabilidad} muestra los resultados asociados a ama
 				\toprule\toprule
 				&&\multicolumn{7}{c}{Crecimiento del comercio internacional}\\
 				\midrule
-				Apertura al cambio  &&       0.032         &&       0.018         &&       0.025         &&       0.031         \\
-				&&     (0.033)         &&     (0.029)         &&     (0.028)         &&     (0.030)         \\
-				PIB                 &&       0.001         &&       0.002         &&       0.001         &&       0.001         \\
-				&&     (0.003)         &&     (0.003)         &&     (0.003)         &&     (0.003)         \\
-				Derecha             &&                     &&      -0.144\sym{***}&&      -0.197\sym{***}&&      -0.215\sym{***}\\
-				&&                     &&     (0.044)         &&     (0.051)         &&     (0.056)         \\
-				Izquierda           &&                     &&      -0.097\sym{**} &&      -0.142\sym{***}&&      -0.152\sym{***}\\
-				&&                     &&     (0.045)         &&     (0.049)         &&     (0.051)         \\
-				Edad                &&                     &&                     &&       0.001         &&       0.000         \\
+				Apertura al cambio  &&       0.030         &&       0.016         &&       0.023         &&       0.026         \\
+				&&     (0.032)         &&     (0.029)         &&     (0.028)         &&     (0.029)         \\
+				PIB                 &&       0.001         &&       0.003         &&       0.002         &&       0.002         \\
+				&&     (0.003)         &&     (0.002)         &&     (0.002)         &&     (0.003)         \\
+				Derecha             &&                     &&      -0.119\sym{***}&&      -0.176\sym{***}&&      -0.186\sym{***}\\
+				&&                     &&     (0.039)         &&     (0.047)         &&     (0.053)         \\
+				Izquierda           &&                     &&      -0.074\sym{*}  &&      -0.123\sym{**} &&      -0.128\sym{**} \\
+				&&                     &&     (0.040)         &&     (0.046)         &&     (0.049)         \\
+				Edad                &&                     &&                     &&       0.001         &&       0.001         \\
 				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
 				Duración            &&                     &&                     &&      -0.002\sym{*}  &&      -0.002\sym{*}  \\
 				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
 				Año                &&                     &&                     &&      -0.001         &&      -0.001         \\
 				&&                     &&                     &&     (0.001)         &&     (0.001)         \\
-				Educación           &&                     &&                     &&                     &&       0.008         \\
-				&&                     &&                     &&                     &&     (0.010)         \\
-				Constante            &&      -0.138         &&       0.031         &&       1.377         &&       2.047         \\
-				&&     (0.157)         &&     (0.148)         &&     (1.595)         &&     (1.811)         \\
+				Educación           &&                     &&                     &&                     &&       0.005         \\
+				&&                     &&                     &&                     &&     (0.011)         \\
+				Polity Index       &&                     &&                     &&                     &&       0.000         \\
+				&&                     &&                     &&                     &&     (0.002)         \\
+				Constante            &&      -0.130         &&       0.012         &&       1.205         &&       1.555         \\
+				&&     (0.151)         &&     (0.145)         &&     (1.564)         &&     (1.793)         \\
 				\midrule
-				R-squared           &&       0.033         &&       0.334         &&       0.440         &&       0.456         \\
-				N                   &&          31         &&          31         &&          31         &&          31         \\
+				R-squared           &&       0.032         &&       0.286         &&       0.404         &&       0.410         \\
+				N                   &&          33         &&          33         &&          33         &&          33         \\
 				\bottomrule\bottomrule
 			\end{tabular}
 			\begin{tablenotes}
@@ -978,59 +986,51 @@ Por último, la tabla \ref{tab:amabilidad} muestra los resultados asociados a ama
 	}
 \end{table}
 
-Cabe realizar algunas observaciones generales relativas a las tres tablas presentadas. En primer lugar, se observa transversalmente que las variables derecha e izquierda tienen efectos altamente significativos. Este resultado es coherente con \cite{Crichlow2002} donde se muestra que la ideología política incide en las posturas frente al libre comercio de autoridades políticas. Sin embargo, llama la atención que tanto para derecha como para izquierda el coeficiente es negativo y de similar magnitud.  Por otro lado, se observa que la variable duración también tiene un efecto significativo en todos los modelos estimados. El signo negativo asociado a esta variable indica que mientras más tiempo estuvo un líder en el poder mayor fue la caída del comercio internacional. Por último, podría llamar la atención en bajo número de observaciones. Este número resulta al cruzar los 52 coeficientes $\overline{PRE}_z$ y $\overline{POST}_z$ que resultaron del estudio en el capítulo \ref{ch:com_importan}, con las 96 observaciones de personalidad que fue posible estimar.
-
-\iffalse
 \begin{table}[htpb]
 	%\resizebox{\textwidth}{!}{
 	{
 		\begin{threeparttable}
-			\caption{Los Cinco Grandes y comercio internacional}
-			\label{fig:amabilidad}
+			\caption{Inestabilidad emocional y comercio internacional}
+			\label{tab:amabilidad}
 			\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 			\begin{tabular}{llSlSlSlS}
 				\toprule\toprule
 				&&\multicolumn{7}{c}{Crecimiento del comercio internacional}\\
 				\midrule
-				Extraversión        &&      -0.056         &&      -0.055         &&     -0.084\sym{**} &&     -0.074         \\
-				&&     (0.039)         &&     (0.041)         &&    (0.039)         &&    (0.044)         \\
-				Inestabilidad emocional&&      -0.023       &  &      -0.012       & &      -0.013       & &      -0.015         \\
-				&&     (0.025)         &&     (0.025)         &&    (0.026)         &&    (0.030)         \\
-				Amabilidad          &&      -0.039         &&      -0.012         &&     -0.076         &&     -0.064         \\
-				&&     (0.072)         &&     (0.073)         &&    (0.080)         &&    (0.084)         \\
-				Responsabilidad     &&      -0.025         &&      -0.013         &&      0.040         &&      0.019         \\
-				&&     (0.055)         &&     (0.058)         &&    (0.059)         &&    (0.064)         \\
-				Apertura al cambio  &&       0.015         &&       0.016         &&      0.008         &&      0.019         \\
-				&&     (0.037)         &&     (0.036)         &&    (0.033)         &&    (0.034)         \\
-				PIB                 &&      -0.001         &&       0.000         &&     -0.002         &&     -0.002         \\
-				&&     (0.003)         &&     (0.003)         &&    (0.003)         &&    (0.003)         \\
-				Derecha             &&                     &&      -0.094\sym{**} &&     -0.163\sym{***}&&     -0.192\sym{***}\\
-				&&                     &&     (0.041)         &&    (0.047)         &&    (0.056)         \\
-				Izquierda           &&                     &&      -0.081\sym{*}  &&     -0.150\sym{***}&&     -0.165\sym{***}\\
-				&&                     &&     (0.042)         &&    (0.050)         &&    (0.055)         \\
-				Edad                &&                     &&                     &&      0.001         &&      0.000         \\
-				&&                     &&                     &&    (0.001)         &&    (0.001)         \\
-				Duración            &&                     &&                     &&     -0.003\sym{**} &&     -0.003\sym{**} \\
-				&&                     &&                     &&    (0.001)         &&    (0.001)         \\
-				Año                &&                     &&                     &&     -0.001         &&     -0.001         \\
-				&&                     &&                     &&    (0.001)         &&    (0.001)         \\
-				Educación           &&                     &&                     &&                    &&      0.008         \\
-				&&                     &&                     &&                    &&    (0.012)         \\
-				Constante            &&       0.617         &&       0.451         &&      2.340         &&      3.071         \\
-				&&     (0.440)         &&     (0.441)         &&    (1.642)         &&    (1.885)         \\
-				\midrule             
-				R-squared           &&       0.297         &&       0.428         &&      0.582         &&      0.629         \\
-				N                   &&          34         &&          33         &&         33         &&         31         \\
+			Inestabilidad emocional&&       0.007         &&       0.009         &&       0.005         &&       0.007         \\
+			&&     (0.023)         &&     (0.022)         &&     (0.023)         &&     (0.025)         \\
+			PIB                 &&       0.001         &&       0.002         &&       0.002         &&       0.002         \\
+			&&     (0.003)         &&     (0.002)         &&     (0.002)         &&     (0.003)         \\
+			Derecha             &&                     &&      -0.124\sym{***}&&      -0.180\sym{***}&&      -0.188\sym{***}\\
+			&&                     &&     (0.039)         &&     (0.048)         &&     (0.056)         \\
+			Izquierda           &&                     &&      -0.084\sym{*}  &&      -0.130\sym{**} &&      -0.135\sym{**} \\
+			&&                     &&     (0.042)         &&     (0.049)         &&     (0.054)         \\
+			Edad                &&                     &&                     &&       0.001         &&       0.001         \\
+			&&                     &&                     &&     (0.001)         &&     (0.001)         \\
+			Duración            &&                     &&                     &&      -0.002\sym{*}  &&      -0.002         \\
+			&&                     &&                     &&     (0.001)         &&     (0.001)         \\
+			Año                &&                     &&                     &&      -0.001         &&      -0.001         \\
+			&&                     &&                     &&     (0.001)         &&     (0.001)         \\
+			Educación           &&                     &&                     &&                     &&       0.004         \\
+			&&                     &&                     &&                     &&     (0.011)         \\
+			Polity Index       &&                     &&                     &&                     &&       0.000         \\
+			&&                     &&                     &&                     &&     (0.002)         \\
+			Constante            &&      -0.019         &&       0.060         &&       1.273         &&       1.549         \\
+			&&     (0.094)         &&     (0.089)         &&     (1.586)         &&     (1.821)         \\
+			\midrule
+			R-squared           &&       0.007         &&       0.281         &&       0.388         &&       0.392         \\
+			N                   &&          33         &&          33         &&          33         &&          33         \\
 				\bottomrule\bottomrule
 			\end{tabular}
 			\begin{tablenotes}
-				\footnotesize{Notas: TO DO.}
+				\footnotesize{Notas: Resultados de la regresión (\ref{eq:reg_bf}) para estimar el efecto del factor inestabilidad emocional sobre el comercio internacional. Significancia al 10\%, 5\% y 1\% es indicada por \sym{*}, \sym{**}, \sym{***} respectivamente.}
 			\end{tablenotes}
 		\end{threeparttable}
 		%}
 	}
 \end{table}
-\fi
+
+Cabe realizar algunas observaciones generales relativas a las tres tablas presentadas. En primer lugar, se observa transversalmente que las variables derecha e izquierda tienen efectos altamente significativos. Este resultado es coherente con \cite{Crichlow2002} donde se muestra que la ideología política incide en las posturas frente al libre comercio de autoridades políticas. Sin embargo, llama la atención que tanto para derecha como para izquierda el coeficiente es negativo y de similar magnitud.  Por otro lado, se observa que la variable duración también tiene un efecto significativo en todos los modelos estimados. El signo negativo asociado a esta variable indica que mientras más tiempo estuvo un líder en el poder mayor fue la caída del comercio internacional. Por último, podría llamar la atención en bajo número de observaciones. Este número resulta al cruzar los 52 coeficientes $\overline{PRE}_z$ y $\overline{POST}_z$ que resultaron del estudio en el capítulo \ref{ch:com_importan}, con las 96 observaciones de personalidad que fue posible estimar.
 
 %\clearpage
 \subsection{¿Cuál es el factor más importante?}
@@ -1094,7 +1094,7 @@ En la figura \ref{fig:twographs} se muestran dos representaciones de los datos d
 	\caption{Relación entre los factores de personalidad \label{fig:twographs}}
 		\medskip % induce some separation between caption and explanatory material
 		\begin{minipage}{\textwidth} % choose width suitably
-			{\footnotesize  Notas: En la subfigura superior (A) se  \par}
+			{\footnotesize  Notas: En esta figura se muestran tres representaciones de los datos de personalidad. En la subfigura superior, (A), se representan los datos en términos de los factores de personalidad originales. En la subfigura del medio, (B), se representan los datos en términos de las componentes principales. Además se representan como vectores las cargas de las componentes principales sobre los factores de personalidad. Las cargas son los coeficientes obtenidos al predecir un factor de personalidad a partir de las componentes principales. Finalmente, en la subfigura inferior, (C), se grafica la relación entre los factores de personalidad y las componentes principales correspondientes.\par}
 		\end{minipage}
 \end{figure*}
 
@@ -1121,41 +1121,43 @@ En la tabla \ref{tab:pcs} además es posible verificar que los signos de los coef
 			                    &&\multicolumn{3}{c}{Crecimiento del comercio internacional}\\
 			                    &&\multicolumn{1}{c}{Modelo 1}&&\multicolumn{1}{c}{Modelo 2}\\
 			                    \midrule                                  
-			                    Extraversión        &&      -0.068         &&                     \\
+			                    Extraversión        &&      -0.072\sym{*}  &&                     \\
 			                    &&     (0.041)         &&                     \\
-			                    Responsabilidad     &&       0.032         &&                     \\
+			                    Responsabilidad     &&       0.038         &&                     \\
 			                    &&     (0.060)         &&                     \\
-			                    Amabilidad          &&      -0.106         &&                     \\
+			                    Amabilidad          &&      -0.113\sym{*}  &&                     \\
 			                    &&     (0.063)         &&                     \\
-			                     CP-extraversión                &&                     &&      -0.037\sym{**} \\
-			                     &&                     &&     (0.015)         \\
-			                     CP-amabilidad                 &&                     &&      -0.031\sym{**} \\
-			                     &&                     &&     (0.014)         \\
-			                     CP-responsabilidad                 &&                     &&      -0.010         \\
-			                     &&                     &&     (0.012)         \\
-			                    PIB                 &&      -0.002         &&      -0.002         \\
+			                    CP-extraversión                 &&                     &&      -0.039\sym{**} \\
+			                    &&                     &&     (0.016)         \\
+			                    CP-responsabilidad                 &&                     &&      -0.010         \\
+			                    &&                     &&     (0.012)         \\
+			                    CP-amabilidad                 &&                     &&      -0.033\sym{**} \\
+			                    &&                     &&     (0.014)         \\
+			                    PIB                 &&      -0.001         &&      -0.001         \\
 			                    &&     (0.003)         &&     (0.003)         \\
-			                    Derecha             &&      -0.202\sym{***}&&      -0.202\sym{***}\\
-			                    &&     (0.050)         &&     (0.050)         \\
-			                    Izquierda           &&      -0.181\sym{***}&&      -0.181\sym{***}\\
-			                    &&     (0.047)         &&     (0.047)         \\
+			                    Derecha             &&      -0.182\sym{***}&&      -0.182\sym{***}\\
+			                    &&     (0.048)         &&     (0.048)         \\
+			                    Izquierda           &&      -0.169\sym{***}&&      -0.169\sym{***}\\
+			                    &&     (0.046)         &&     (0.046)         \\
 			                    Edad                &&       0.000         &&       0.000         \\
 			                    &&     (0.001)         &&     (0.001)         \\
 			                    Duración            &&      -0.003\sym{**} &&      -0.003\sym{**} \\
 			                    &&     (0.001)         &&     (0.001)         \\
 			                    Año                &&      -0.001         &&      -0.001         \\
 			                    &&     (0.001)         &&     (0.001)         \\
-			                    Educación           &&       0.009         &&       0.009         \\
-			                    &&     (0.010)         &&     (0.010)         \\
-			                    Constante           & &       3.399\sym{*}  &&       2.740         \\
-			                    &&     (1.769)         &&     (1.679)         \\
-			                    \midrule                                 
-			                    R-squared           &&       0.616         &&       0.616         \\
-			                    N                   &&          31         &&          31         \\
+			                    Educación           &&       0.008         &&       0.008         \\
+			                    &&     (0.011)         &&     (0.011)         \\
+			                    Polity Index       &&      -0.001         &&      -0.001         \\
+			                    &&     (0.002)         &&     (0.002)         \\
+			                    Constante            &&       3.083\sym{*}  &&       2.400         \\
+			                    &&     (1.736)         &&     (1.649)         \\
+			                    \midrule
+			                    R-squared           &&       0.587         &&       0.587         \\
+			                    N                   &&          33         &&          33         \\
 				\bottomrule\bottomrule
 			\end{tabular}
 			\begin{tablenotes}
-				\footnotesize{Notas: TO DO.}
+				\footnotesize{Notas: Resultados de la regresión (\ref{eq:reg_bf}) para estimar el efecto de múltiples factores de personalidad sobre el comercio internacional. Significancia al 10\%, 5\% y 1\% es indicada por \sym{*}, \sym{**}, \sym{***} respectivamente.}
 			\end{tablenotes}
 		\end{threeparttable}
 		%}
@@ -1195,7 +1197,7 @@ La tabla \ref{tab:pcs} muestra la media y la desviación de los Cinco Grandes obt
 				Observaciones: 193 &  &  &  &  &  &  &  &  &  &  &  \\ \bottomrule\bottomrule
 			\end{tabular}%
 			\begin{tablenotes}
-				\footnotesize{Notas: TO DO.}
+				\footnotesize{Notas: En esta tabla se comparan estadísticas de .}
 			\end{tablenotes}
 		\end{threeparttable}
 	}
